; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/utils/extr_utils.c_WebPSafeCalloc.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/libwebp/src/utils/extr_utils.c_WebPSafeCalloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@num_calloc_calls = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @WebPSafeCalloc(i64 %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = call i32 @Increment(i32* @num_calloc_calls)
  %8 = load i64, i64* %4, align 8
  %9 = load i64, i64* %5, align 8
  %10 = call i32 @CheckSizeArgumentsOverflow(i64 %8, i64 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %29

13:                                               ; preds = %2
  %14 = load i64, i64* %4, align 8
  %15 = load i64, i64* %5, align 8
  %16 = mul i64 %14, %15
  %17 = icmp ugt i64 %16, 0
  %18 = zext i1 %17 to i32
  %19 = call i32 @assert(i32 %18)
  %20 = load i64, i64* %4, align 8
  %21 = load i64, i64* %5, align 8
  %22 = call i8* @calloc(i64 %20, i64 %21)
  store i8* %22, i8** %6, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = load i64, i64* %4, align 8
  %25 = load i64, i64* %5, align 8
  %26 = mul i64 %24, %25
  %27 = call i32 @AddMem(i8* %23, i64 %26)
  %28 = load i8*, i8** %6, align 8
  store i8* %28, i8** %3, align 8
  br label %29

29:                                               ; preds = %13, %12
  %30 = load i8*, i8** %3, align 8
  ret i8* %30
}

declare dso_local i32 @Increment(i32*) #1

declare dso_local i32 @CheckSizeArgumentsOverflow(i64, i64) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i8* @calloc(i64, i64) #1

declare dso_local i32 @AddMem(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
